--- a/app/src/main/res/layout/shop_fragment.xml
+++ b/app/src/main/res/layout/shop_fragment.xml
@@ -40,12 +40,12 @@
 
             <TextView
                 android:id="@+id/expiry_date"
-                android:text="@string/countdown"
+                android:text="@string/date"
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/shop_countdown_et"
-                android:inputType="number"/>
+                android:id="@+id/shop_date_et"
+                android:inputType="date"/>
         </TableRow>
 
         <Button
