--- a/app/src/main/res/layout/product_fragment.xml
+++ b/app/src/main/res/layout/product_fragment.xml
@@ -74,9 +74,10 @@
                 android:text="@string/date"
                 android:textSize="20sp" />
 
-            <EditText
-                android:id="@+id/date_et"
-                android:inputType="date"/>
+            <TextView
+                android:id="@+id/date_tv"
+                android:text="@string/select_date"
+                android:textSize="20sp"/>
         </TableRow>
 
         <Button
