--- a/app/src/main/res/layout/product_view.xml
+++ b/app/src/main/res/layout/product_view.xml
@@ -119,7 +119,7 @@
                 android:textColor="@color/orange"/>
 
             <TextView
-                android:id="@+id/pr_count_tv"
+                android:id="@+id/pr_date_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_8"
