--- a/app/src/main/res/layout/shop_view.xml
+++ b/app/src/main/res/layout/shop_view.xml
@@ -78,24 +78,10 @@
                 android:textColor="@color/orange"/>
 
             <TextView
-                android:id="@+id/shop_countdown"
+                android:id="@+id/shop_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_8"
-                android:textSize="20sp" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/linearlayout3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/shop_votes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/upvote"
-                android:drawableLeft="@drawable/ic_thumb_up_black_24dp"
                 android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
