--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -11,6 +11,11 @@
         android:title="@string/product"/>
 
     <item
+        android:id="@+id/bottom_add_info"
+        android:icon="@drawable/ic_playlist_add_black_24dp"
+        android:title="@string/add"/>
+
+    <item
         android:id="@+id/bottom_user"
         android:icon="@drawable/ic_person_black_24dp"
         android:title="@string/me"/>
