--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ff0008</color>
     <color name="yellow">#9dfaff5f</color>
     <color name="orange">#afff7424</color>
+    <color name="white">#f7f6f6</color>
 </resources>
