--- a/app/src/main/res/layout/product_fragment.xml
+++ b/app/src/main/res/layout/product_fragment.xml
@@ -76,7 +76,7 @@
 
             <TextView
                 android:id="@+id/date_tv"
-                android:text="@string/select_date"
+                android:hint="@string/select_date"
                 android:textSize="20sp"/>
         </TableRow>
 
