--- a/app/src/main/res/layout/shop_fragment.xml
+++ b/app/src/main/res/layout/shop_fragment.xml
@@ -45,7 +45,7 @@
 
             <TextView
                 android:id="@+id/shop_date_tv"
-                android:text="@string/select_date"
+                android:hint="@string/select_date"
                 android:textSize="20sp"/>
 
         </TableRow>
