--- a/app/src/main/res/layout/activity_shops.xml
+++ b/app/src/main/res/layout/activity_shops.xml
@@ -27,12 +27,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/top_nav"
         android:layout_above="@id/navigation_bar"
-        android:layout_marginHorizontal="10dp">
+        android:layout_marginHorizontal="5dp">
+
+        <ProgressBar
+            android:id="@+id/shop_progress"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            android:progress="@integer/google_play_services_version"
+            android:progressDrawable="@drawable/circle"/>
+
+        <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/shopsRecyclerView"/>
+            android:id="@+id/shopsRecyclerView"
+            />
     </RelativeLayout>
 
     <android.support.design.widget.BottomNavigationView
