--- a/app/src/main/res/layout/shop_fragment.xml
+++ b/app/src/main/res/layout/shop_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,11 +17,13 @@
             <TextView
                 android:id="@+id/shopName"
                 android:text="@string/name"
-                android:textSize="20sp" />
+                android:textColor="@color/pink"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/shop_name_et"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:textColor="@color/colorText"/>
         </TableRow>
 
         <TableRow>
@@ -29,33 +31,41 @@
             <TextView
                 android:id="@+id/shop_discount"
                 android:text="@string/discount"
-                android:textSize="20sp" />
+                android:textColor="@color/pink"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/shop_discount_et"
-                android:inputType="number"/>
+                android:inputType="number"
+                android:textColor="@color/colorText"/>
+            <TextView
+                android:text="@string/off"
+                android:textSize="15sp"/>
         </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:paddingBottom="100dp">
 
             <TextView
                 android:id="@+id/expiry_date"
                 android:text="@string/date"
-                android:textSize="20sp" />
+                android:textColor="@color/pink"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/shop_date_tv"
                 android:hint="@string/select_date"
-                android:textSize="20sp"/>
+                android:textSize="15sp"/>
 
         </TableRow>
 
         <Button
             android:id="@+id/shop_discount_confirm_btn"
-            android:layout_margin="40dp"
+            android:layout_margin="4dp"
             android:text="@string/confirm"
-            android:background="@color/orange"
-            android:textColor="@color/yellow"/>
+            android:background="@drawable/button"
+            android:textColor="@color/pink" />
 
     </TableLayout>
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
