--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff0008</color>
-    <color name="yellow">#9dfaff5f</color>
-    <color name="orange">#afff7424</color>
-    <color name="white">#f7f6f6</color>
+    <color name="colorPrimary">#7E57C2</color>
+    <color name="colorPrimaryDark">#673AB7</color>
+    <color name="colorAccent">#ea80fc</color>
+    <color name="yellow">#FFEA00</color>
+    <color name="stroke">#7C4DFF</color>
+    <color name="colorText">#757575</color>
+    <color name="pink">#ea80fc</color>
 </resources>
